0.8.1   (under development)

	o	Rcpp modules. An Rcpp module is a collection of internal (c++)
	functions and classes that are exposed to R. Inspired from
	Boost.Python
	
	Modules are created internally using the RCPP_MODULE macro and retrieved
	in the R side with the Module function. The unit test file 
	runit.Module.R shows an example.
	
	The Rcpp-modules vignette documents the feature
	
	o	Rcpp.package.skeleton has been improved to generate a package using 
	an Rcpp module, controlled by the "module" argument

	o	Evaluating a call inside an environment did not work properly
	
	o	cppfunction has been withdrawn since the introduction of the more 
	flexible cxxfunction in the inline package. Rcpp no longer depend
	on inline since many uses of Rcpp do not require inline at all. We still 
	use inline for unit tests but this is now handled locally in the
	unit tests loader runTests.R. Users of cppfunction can redefine it as: 
	
	cppfunction <- function(...) cxxfunction( ..., plugin = "Rcpp" )

0.8.0   2010-05-17

    o   All Rcpp headers have been moved to the inst/include directory,
        allowing use of 'LinkingTo: Rcpp'. But the Makevars and Makevars.win
        are still needed to link against the user library.

    o   Automatic exception forwarding has been withdrawn because of
        portability issues (as it did not work on the Windows platform).
        Exception forwarding is still possible but is now based on explicit
        code of the form:
    
          try {
            // user code
          } catch( std::exception& __ex__){ 
            forward_exception_to_r( __ex___ ) ;
          }
    
        Alternatively, the macro BEGIN_RCPP and END_RCPP can use used to enclose
        code so that it captures exceptions and forward them to R. 
    
          BEGIN_RCPP
          // user code
          END_RCPP
    
    o   new __experimental__ macros 
    
        The macros RCPP_FUNCTION_0, ..., RCPP_FUNCTION_65 to help creating C++